# daft-sql-adapter

./: .gitignore  README.md  main.py  pyproject.toml
daft_sql_adapter/: __init__.py  cli.py  ctas.py  exceptions.py  runner.py
daft_sql_adapter/backend/: __init__.py  factory.py  protocol.py  session_backend.py  spark_backend.py
daft_sql_adapter/catalog/: __init__.py  table_loader.py  unity_client.py
daft_sql_adapter/config/: __init__.py  credentials.py
daft_sql_adapter/pagination/: __init__.py  paginator.py
daft_sql_adapter/sql/: __init__.py  dispatch.py  transpile.py
daft_sql_adapter/writers/: __init__.py  base.py  delta_writer.py  iceberg_writer.py  registry.py
scripts/: ray-job-submit.sh
