[project]
name = "daft-sql-adapter"
version = "0.1.0"
description = "Run Spark SQL against Databricks Unity Catalog via Daft on Ray (transpile, execute, CTAS to Delta/Iceberg, paginated Arrow)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daft[ray]>=0.7.4",
    "getdaft[deltalake,unity]>=0.5.0",
    "sqlglot>=26.0.0",
    "pyarrow>=14.0.0",
]
[project.optional-dependencies]
iceberg = ["pyiceberg>=0.6.0"]
spark = ["daft[spark]>=0.7.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daft_sql_adapter"]

[project.scripts]
daft-sql-adapter = "daft_sql_adapter.cli:main"
